hack to prevent margin collapsing

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -87,4 +87,5 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding:1px; /*hack to prevent margin collapsing*/
 }
